2007-08-13  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp: Patch from Markus Golser
	to add video/x-m4v as a supported mime-type for the NarrowSpace plugin

2007-08-13  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (test_resolve): Add another pattern
	to test
	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry): Ignore 
	"showwhilebuffering" entries, as we don't show anything whilst
	buffering
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_remove_filename),
	(totem_pl_resolve_url): Remove parameters and fragment IDs from URLs
	when getting the base

2007-08-12  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_can_parse_from_data):
	Add more debug when a mime-type isn't known

	* src/totem.h: Add patch from Ed Catmur <ed@catmur.co.uk>
	to avoid hangs with specific versions of GCC and a set of
	optimisations (Closes: #463730)

2007-08-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (on_recent_file_item_activated):
	* src/totem-playlist.c: (totem_playlist_set_waiting_cursor),
	(totem_playlist_unset_waiting_cursor), (drop_cb),
	(totem_playlist_add_files), (totem_playlist_add_mrl_with_cursor),
	(totem_playlist_add_mrl):
	* src/totem-playlist.h:
	* src/totem-session.c: (totem_session_restore):
	* src/totem.c: (totem_action_drop_files),
	(totem_action_open_files_list), (totem_action_remote):
	When adding items to the playlist, set the cursor waiting on the
	outermost loop, so that we don't set it once per file added to
	the playlist (and get flicker when doing "totem ~/Movies/*")

2007-08-10  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am: Don't delete the glow button when
	cleaning up (Closes: #465499)

2007-08-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  Close audio device again after initial probing. Playbin will open it